test repartition banner

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,7 +1,11 @@
 
 $break-point: (
-    md:  945px,
-    lg:  1024px,
+    xs:     612px,
+    md:     768px,
+    lg:    1024px,
+    mlg:   1280px,
+    xlg:   1400px,
+    xxlg:  1450px,
 );
 
 $fonts: (
