ajout avant section

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -5,7 +5,9 @@ $break-point: (
     lg:    1024px,
     mlg:   1280px,
     xlg:   1360px,
-    xxlg:  1450px,
+    xxlg:  1420px,
+    xtlg:  1920px,
+    other: 1925px,
 );
 
 $fonts: (
