--- a/sass/layout/_l-layout.scss
+++ b/sass/layout/_l-layout.scss
@@ -138,6 +138,9 @@
                     
                 }
                 @media screen and (min-width: map-get($break-point, xtlg)) {
+                    margin-right: 4rem;
+                }
+                @media screen and (min-width: map-get($break-point, xtlg)) {
                         
                     margin-right: 4rem;
                 }
