--- a/sass/layout/_l-layout.scss
+++ b/sass/layout/_l-layout.scss
@@ -137,7 +137,7 @@
                     text-align: right;
                     
                 }
-                @media screen and (min-width: map-get($break-point, xtlg)) {
+                @media screen and (min-width: map-get($break-point, xxlg)) {
                     margin-right: 4rem;
                 }
                 @media screen and (min-width: map-get($break-point, xtlg)) {
